# crb

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md  ]  justfile
crates/crb/: Cargo.toml  README.md
crates/crb-actor/: Cargo.toml
crates/crb-actor-ext/: Cargo.toml
crates/crb-actor-ext/src/: lib.rs
crates/crb-actor/src/: actor.rs  context.rs  event.rs  interrupt.rs  lib.rs  message.rs  runtime.rs  tracker.rs
crates/crb-actor/tests/: test_actor.rs  test_trackable.r  test_trackable.rs
crates/crb-agent/: Cargo.toml
crates/crb-agent-ext/: Cargo.toml
crates/crb-agent-ext/src/: interaction.rs  lib.rs
crates/crb-agent/src/: address.rs  address_ext.rs  agent.rs  context.rs  equip.rs  event.rs  extension.rs  finalizer.rs  global.rs  interruptor.rs  lib.rs  runtime.rs
crates/crb-agent/src/message/: event.rs  finished.rs  interrupt.rs  loopback.rs  mod.rs
crates/crb-agent/src/performers/: async_performer.rs  consume_performer.rs  duty_performer.rs  events_performer.rs  in_context_performer.rs  interrupt_performer.rs  loopback.rs  mod.rs  process_performer.rs  sync_performer.rs
crates/crb-conductor/: Cargo.toml
crates/crb-conductor/src/: actor.rs  lib.rs
crates/crb-core/: Cargo.toml
crates/crb-core/src/: lib.rs  types.rs
crates/crb-core/src/compatible_runtime/: mod.rs
crates/crb-core/src/std_runtime/: time.rs
crates/crb-core/src/types/: mod.rs  slot.rs  uid.rs  unique.rs
crates/crb-download/: Cargo.toml
crates/crb-download/src/: destination.rs  lib.rs  progress.rs  stream.rs
crates/crb-morph/: Cargo.toml
crates/crb-morph/src/: lib.rs
crates/crb-parallel/: Cargo.toml
crates/crb-parallel/src/: concurrent.rs  lib.rs
crates/crb-pipeline/: Cargo.toml
crates/crb-pipeline/src/: actor.rs  agent.rs  async_task.rs  extension.rs  hybryd_task.rs  lib.rs  meta.rs  pipeline.rs  routine.rs  sequencer.rs  service.rs  stage.rs  sync_task.rs  task.rs
crates/crb-routine/: Cargo.toml
crates/crb-routine/src/: finalizer.rs  lib.rs  routine.rs  runtime.rs
crates/crb-runtime/: Cargo.toml
crates/crb-runtime/src/: context.rs  controller.rs  error.rs  interruptor.rs  lib.rs  runnable.rs  runtime.rs  task.rs
crates/crb-send/: Cargo.toml
crates/crb-send/src/: lib.rs  message.rs  notifier.rs  sender.rs
crates/crb-superagent/: Cargo.toml  KEEP_THIS_CRATE_SEPARATED.md
crates/crb-superagent/src/: address.rs  attach.rs  bridge.rs  drainer.rs  interaction.rs  lib.rs  mission.rs  molting.rs  molting_1.rs  routine.rs  stream.rs  subscribe.rs  supervisor.rs  time.rs  timeout.rs
crates/crb-superagent/src/interplay/: drainer.rs  fetcher.rs  interaction.rs  mod.rs  ping.rs  subscription.rs
crates/crb-superagent/src/mission/: async_fn.rs  mod.rs  reporting.rs  runtime.rs  sync_fn.rs
crates/crb-superagent/src/routine/: mod.rs  sync_routine.rs
crates/crb-superagent/src/supervisor/: mod.rs  stacker.rs
crates/crb-superagent/src/time/: interval.rs  mod.rs  timeout.rs  timer.rs
crates/crb-superagent/src/timer/: interval.rs  mod.rs  timer.rs
crates/crb-supervisor/: Cargo.toml
crates/crb-supervisor/src/: agent.rs  lib.rs
crates/crb-system/: Cargo.toml
crates/crb-system/src/: lib.rs
crates/crb-task/: Cargo.toml
crates/crb-task/src/: async_task.rs  hybryd_task.rs  lib.rs  runtime.rs  sync_task.rs  task.rs  typed_task.rs  typeless_task.rs
crates/crb-task/src/performers/: async_performer.rs  interrupt_performer.rs  mod.rs  sync_performer.rs
crates/crb/src/: lib.rs
crates/crb/tests/: test_actor.rs  test_agent.rs  test_fsm.rs  test_molting.rs  test_perf.rs  test_pipeline.rs  test_supervisor.rs  test_termination.rs  test_trackable.rs  test_uni_address.rs
crb-send/: Cargo.toml
crb-send/src/: notifier.rs
do/: bump  release
examples/axum-handler/: Cargo.toml
examples/axum-handler/src/: lib.rs  main.rs
examples/crates-dumper/: Cargo.toml
examples/crates-dumper/src/: lib.rs  main.rs
examples/file-watcher/: Cargo.toml
examples/file-watcher/src/: lib.rs  main.rs
examples/tui-app/: Cargo.toml
examples/tui-app/src/: app.rs  events.rs  lib.rs  main.rs  state.rs
