[workspace]
resolver = "2"
members = [
    "crates/*",
]

[workspace.package]
version = "0.0.21"
edition = "2021"
license = "MIT"
repository = "https://github.com/runtime-blocks/crb"

[workspace.dependencies]
anyhow = "1.0.94"
async-trait = "0.1.83"
crb-agent = { version = "0.0.21", path = "crates/crb-agent" }
crb-agent-ext = { version = "0.0.21", path = "crates/crb-agent-ext" }
crb-core = { version = "0.0.21", path = "crates/crb-core" }
crb-pipeline = { version = "0.0.21", path = "crates/crb-pipeline" }
crb-runtime = { version = "0.0.21", path = "crates/crb-runtime" }
crb-supervisor = { version = "0.0.21", path = "crates/crb-supervisor" }
derive_more = { version = "1.0.0", features = ["full"] }
futures = "0.3.31"
log = "0.4.22"
thiserror = "2.0.7"
tokio = { version = "1.42.0", features = ["full"] }
typed-slab = "0.2.0"
