[workspace]
resolver = "2"
members = [
    "crates/*",
]
exclude = [
    "examples"
]

[workspace.package]
version = "0.0.28"
edition = "2021"
license = "MIT"
repository = "https://github.com/runtime-blocks/crb"

[workspace.dependencies]
anyhow = "1.0.95"
async-trait = "0.1.86"
crb-agent = { version = "0.0.28", path = "crates/crb-agent" }
crb-superagent = { version = "0.0.28", path = "crates/crb-superagent" }
crb-core = { version = "0.0.28", path = "crates/crb-core" }
crb-runtime = { version = "0.0.28", path = "crates/crb-runtime" }
crb-send = { version = "0.0.28", path = "crates/crb-send" }
crb-system = { version = "0.0.28", path = "crates/crb-system" }
derive_more = { version = "1.0.0", features = ["full"] }
futures = "0.3.31"
futures-util = "0.3.31"
log = "0.4.25"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = "0.1.17"
typed-slab = "0.2.1"
