[package]
name = "crb-actor-ext"
description = "CRB | Composable Runtime Blocks | Actor Ext"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
crb-actor.workspace = true
crb-core.workspace = true
crb-runtime.workspace = true
futures.workspace = true
log.workspace = true
thiserror.workspace = true
