[package]
name = "crb-actor"
description = "CRB | Composable Runtime Blocks | Actor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
crb-core.workspace = true
crb-runtime.workspace = true
derive_more.workspace = true
log.workspace = true
typed-slab.workspace = true

[dev-dependencies]
tokio.workspace = true
