[package]
name = "crb-agent-ext"
description = "CRB | Composable Runtime Blocks | Agent Ext"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
crb-agent.workspace = true
crb-core.workspace = true
crb-runtime.workspace = true
futures.workspace = true
log.workspace = true
thiserror.workspace = true
