[package]
name = "crb-agent"
description = "CRB | Composable Runtime Blocks | Agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
derive_more.workspace = true
crb-core.workspace = true
crb-runtime.workspace = true
crb-send.workspace = true
futures.workspace = true
log.workspace = true
tokio = { workspace = true, optional = true }

[features]
default = ["sync"]
sync = ["tokio"]
