[package]
name = "crb-conductor"
description = "CRB | Composable Runtime Blocks | Conductor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
crb-actor.workspace = true
crb-core.workspace = true
crb-runtime.workspace = true
crb-supervisor.workspace = true
log.workspace = true
typedmap = { version = "0.6.0", features = ["dashmap"] }
