[package]
name = "crb-core"
description = "CRB | Composable Runtime Blocks | Core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
derive_more.workspace = true
event-listener = "5.3.1"
futures.workspace = true
thiserror.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.38.0", features = ["sync", "rt", "time"] }
uuid = { version = "1.8.0", default-features = false, features = ["v4", "v5", "serde"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.38.0", features = ["sync"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
ordered-float = { version = "4.2.0", default-features = false }
uuid = { version = "1.8.0", default-features = false, features = ["v4", "v5", "serde", "js"] }
wasm-bindgen-futures = "0.4.42"
js-sys = "0.3.69"
web-sys = { version = "0.3.69", features = ["Performance", "Window"] }
