[package]
name = "crb-morph"
description = "CRB | Composable Runtime Blocks | Morph"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
crb-core.workspace = true
crb-runtime.workspace = true
log.workspace = true
