[package]
name = "crb-pipeline"
description = "CRB | Composable Runtime Blocks | Pipeline"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
crb-agent.workspace = true
crb-core.workspace = true
crb-runtime.workspace = true
crb-superagent.workspace = true
derive_more.workspace = true
log.workspace = true
typedmap = { version = "0.6.0", features = ["dashmap"] }
