[package]
name = "crb-routine"
description = "CRB | Composable Runtime Blocks | Routine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
crb-core.workspace = true
futures.workspace = true
log.workspace = true
thiserror.workspace = true
