[package]
name = "crb-runtime"
description = "CRB | Composable Runtime Blocks | Runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
crb-core.workspace = true
derive_more.workspace = true
futures.workspace = true
thiserror.workspace = true
