[package]
name = "crb-superagent"
description = "CRB | Composable Runtime Blocks | Agent Extensions"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
crb-agent.workspace = true
crb-core.workspace = true
crb-runtime.workspace = true
crb-send.workspace = true
derive_more.workspace = true
futures.workspace = true
futures-util.workspace = true
log.workspace = true
thiserror.workspace = true
typed-slab.workspace = true
