[package]
name = "crb-supervisor"
description = "CRB | Composable Runtime Blocks | Supervisor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
crb-actor.workspace = true
crb-agent.workspace = true
crb-core.workspace = true
crb-runtime.workspace = true
derive_more.workspace = true
log.workspace = true
typed-slab.workspace = true
