[package]
name = "crb-task"
description = "CRB | Composable Runtime Blocks | Task"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
crb-core.workspace = true
crb-runtime.workspace = true
futures.workspace = true
log.workspace = true
