[package]
name = "crb"
description = "CRB | Composable Runtime Blocks"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
crb-actor.workspace = true
crb-agent.workspace = true
crb-core.workspace = true
crb-pipeline.workspace = true
crb-runtime.workspace = true
crb-supervisor.workspace = true

crb-routine.workspace = true
crb-actor-ext.workspace = true
crb-task.workspace = true

[dev-dependencies]
anyhow.workspace = true
async-trait.workspace = true
tokio.workspace = true
