[package]
name = "crb"
description = "CRB | Composable Runtime Blocks"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
crb-agent.workspace = true
crb-agent-ext.workspace = true
crb-core.workspace = true
crb-pipeline.workspace = true
crb-runtime.workspace = true
crb-supervisor.workspace = true

[dev-dependencies]
anyhow.workspace = true
async-trait.workspace = true
tokio.workspace = true
