[package]
name = "crb"
description = "CRB | Composable Runtime Blocks"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
crb-agent.workspace = true
crb-core.workspace = true
crb-pipeline.workspace = true
crb-runtime.workspace = true
crb-send.workspace = true
crb-superagent.workspace = true

[dev-dependencies]
anyhow.workspace = true
async-trait.workspace = true
console-subscriber = "0.4.1"
derive_more.workspace = true
tokio.workspace = true
