[package]
public = false
name = "crb-example-crates-dumper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.83"
chrono = "0.4.39"
crb.path = "../../crates/crb"
crb-system.path = "../../crates/crb-system"
csv = "1.3.1"
db-dump = "0.7.9"
futures = "0.3.31"
reqwest = { version = "0.12.12", features = ["stream"] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
